--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "update": "node --harmony-async-await fetch.js"
   },
   "devDependencies": {
+    "axios": "^0.15.3",
     "babel": "^6.3.26",
     "babel-cli": "^6.4.0",
     "babel-core": "^6.4.0",
